<resources>

    <!--app info-->
    <string name="app_name">Material Wallpaper</string>
    <string name="app_copyright">Copyright &#169; 2023 Solodroid Developer \n All rights reserved</string>
    <string name="share_text">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>

    <!--navigation name-->
    <string name="title_nav_wallpaper">Wallpaper</string>
    <string name="title_nav_category">Category</string>
    <string name="title_nav_favorite">Favorite</string>

    <!--wallpaper set action-->
    <string name="msg_set_action">What would you like to do?</string>
    <string name="txt_set_as_home_screen">Set as home screen</string>
    <string name="txt_set_as_lock_screen">Set as lock screen</string>
    <string name="txt_set_both_screen">Set both screen</string>
    <string name="txt_set_wallpaper">Set as wallpaper</string>
    <string name="txt_set_with">Set with</string>
    <string name="txt_crop">Crop</string>
    <string name="txt_set_video_wallpaper">Set video wallpaper</string>
    <string name="txt_save_to_device">Save to device</string>
    <string name="msg_wallpaper_success">Wallpaper updated</string>
    <string name="msg_wallpaper_saved">Wallpaper saved</string>
    <string name="msg_wallpaper_failed">Wallpaper not applied</string>
    <string name="msg_wallpaper_error">Wallpaper error</string>

    <!--set wallpaper option-->
    <string name="txt_title_info">Info</string>
    <string name="txt_info_name">Name</string>
    <string name="txt_info_category">Category</string>
    <string name="txt_info_resolution">Resolution</string>
    <string name="txt_info_size">Size</string>
    <string name="txt_info_type">Type</string>
    <string name="txt_info_views">Views</string>
    <string name="txt_info_downloads">Downloads</string>
    <string name="txt_info_tags">Tags</string>

    <!--dialog option-->
    <string name="dialog_option_ok">OK</string>
    <string name="dialog_option_yes">Yes</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="dialog_option_exit">Exit</string>

    <!--snack bar message-->
    <string name="snack_bar_favorite_removed">Removed from favorite</string>
    <string name="snack_bar_favorite_added">Added to favorite</string>

    <!--network & error message-->
    <string name="whops">Whoops!</string>
    <string name="failed_title_text">Whoops!</string>
    <string name="failed_text">There is something problem with your network or the server is currently down, please try it again later.</string>
    <string name="no_category_found">It looks like there are no category available at this time</string>
    <string name="no_search_wallpaper_found">No wallpapers found! if you want to continue search, please try enter another keyword!</string>
    <string name="no_search_category_found">No category found! if you want to continue search, please try enter another keyword!</string>
    <string name="msg_no_item">It looks like there are no wallpapers available in this section.</string>
    <string name="msg_no_favorite">Your favorite list is empty because you do not add any wallpapers in the favorite menu.</string>
    <string name="btn_retry">Retry</string>

    <!--wallpaper and category aspect ratio-->
    <string name="wallpaper_image_ratio_rectangle">H,1:1.5</string>
    <string name="wallpaper_image_ratio_square">H,1:1</string>
    <string name="category_image_ratio">H,2:1</string>

    <!--search-->
    <string name="search_hint">Search&#8230;</string>
    <string name="radio_button_wallpaper">Wallpaper</string>
    <string name="radio_button_category">Category</string>
    <string name="msg_search_input">Please Insert Keyword</string>

    <!--redirect if app suspended-->
    <string name="redirect_title">New App Updates</string>
    <string name="redirect_message">This application has expired and is no longer used, press the button below to download and install the latest update of this application.</string>
    <string name="redirect_button">Download Update Now</string>
    <string name="redirect_error">Whoops! there is problem with the url, try again later</string>

    <!--title tab menu which is only used when online tab menu is disabled from Config.java-->
    <string name="tab_menu_recent">Recent</string>
    <string name="tab_menu_featured">Featured</string>
    <string name="tab_menu_popular">Popular</string>
    <string name="tab_menu_random">Random</string>
    <string name="tab_menu_live">Live Wallpaper</string>

    <!--settings and others-->
    <string name="menu_settings">Settings</string>
    <string name="msg_clear_cache">Are you sure want to clear cache?</string>
    <string name="title_setting_theme">Dark Theme</string>
    <string name="sub_title_setting_theme">Better for eyesight &amp; battery life</string>
    <string name="title_setting_display_wallpaper">Display Wallpaper</string>
    <string name="option_menu_wallpaper_grid_2">2 Columns</string>
    <string name="option_menu_wallpaper_grid_3">3 Columns</string>
    <string name="title_setting_display_category">Display Category</string>
    <string name="option_menu_category_list">List</string>
    <string name="option_menu_category_grid_2">2 Columns</string>
    <string name="title_setting_notification">Notification</string>
    <string name="sub_title_setting_notification">Subscribe to receive wallpapers update</string>
    <string name="title_setting_clear_cache">Clear Cache</string>
    <string name="sub_setting_clear_cache_start">Free up</string>
    <string name="sub_setting_clear_cache_end">of space</string>
    <string name="title_setting_clear_search">Clear Search History</string>
    <string name="sub_title_setting_clear_search">Remove searches you have performed</string>
    <string name="title_dialog_clear_search_history">Clear Search History</string>
    <string name="msg_dialog_clear_search_history">Are you sure want to clear your search history?</string>
    <string name="clearing_empty">Your search history is empty</string>
    <string name="clearing_success">Search history cleared successfully&#8230;</string>
    <string name="title_setting_privacy">Privacy Policy</string>
    <string name="sub_title_setting_privacy">App Terms &amp; Policies</string>
    <string name="title_setting_rate">Rate Us</string>
    <string name="sub_title_setting_rate">Give your rating and review for the app</string>
    <string name="title_setting_more_apps">More Apps</string>
    <string name="sub_title_setting_more_apps">Discover our other apps for you</string>
    <string name="title_setting_copyright">Copyright Information</string>
    <string name="sub_title_setting_copyright">All wallpapers that are available in the App are free and it\'s credit goes to their respective owners. These wallpapers are licensed under the Creative Commons Zero (CC0) license. Please contact us if you find any wallpaper that violates any rules and we will remove the wallpaper.</string>
    <string name="title_setting_about">About</string>
    <string name="sub_title_setting_about">App info  &amp; build version</string>
    <string name="msg_about_version">Version</string>
    <string name="msg_cache_cleared">cache has been cleared</string>
    <string name="title_setting_path">Wallpaper Saved To</string>
    <string name="wallpaper_count_text">Wallpapers</string>
    <string name="img_content_description">TODO</string>
    <string name="msg_cancel_update">Update canceled</string>
    <string name="msg_success_update">Update success!</string>
    <string name="msg_failed_update">Update Failed!</string>
    <string name="title_sort">Sort Wallpapers</string>

    <!--exit message-->
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="msg_dialog_exit">Are you sure want to exit the app?</string>

    <!--vpn alert-->
    <string name="vpn_detected">VPN Detected!</string>
    <string name="close_vpn">Close VPN and re-open the app to continue.</string>

    <!--rewarded option-->
    <string name="msg_watch_ad">Watch ad to be able to unlock and set wallpaper</string>
    <string name="btn_watch_ad">Watch Ad</string>
    <string name="btn_later">I\'ll do it later</string>
    <string name="msg_rewarded_error">Ad not available yet, please try again later</string>

</resources>