<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/spacing_medium"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleTextAppearance="@style/ToolbarFontStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_hint"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/bt_clear"
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_clear" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lyt_banner_ad"
        android:layout_below="@+id/appbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lyt_search_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_medium"
                android:paddingRight="@dimen/spacing_medium">

                <RadioGroup
                    android:id="@+id/radioGroupSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_button_wallpaper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_button_wallpaper"
                        android:textSize="@dimen/text_size_medium" />

                    <RadioButton
                        android:id="@+id/radio_button_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:text="@string/radio_button_category"
                        android:textSize="@dimen/text_size_medium" />

                </RadioGroup>

                <EditText
                    android:id="@+id/edt_index"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:visibility="gone" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_view_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:shimmer_duration="1000">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ViewStub
                            android:id="@+id/lytShimmerViewWallpaper"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                        <ViewStub
                            android:id="@+id/lytShimmerViewCategory"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </RelativeLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <include
                    android:id="@+id/lyt_no_item"
                    layout="@layout/include_no_result"
                    android:visibility="gone" />

                <include
                    android:id="@+id/lyt_failed"
                    layout="@layout/include_failed"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_wallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/grid_space_wallpaper"
                    android:scrollbars="none"
                    android:scrollingCache="true" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"
                    android:scrollingCache="true" />

                <LinearLayout
                    android:id="@+id/lyt_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_suggestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        android:scrollingCache="true" />

                    <View
                        android:id="@+id/bg_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/lyt_banner_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone">

        <com.solodroid.ads.sdk.ui.BannerAdView
            android:id="@+id/bannerAdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
